# edge-veda

./: .gitignore  EdgeVedaCore.podspec  Makefile
.github/workflows/: android-libs.yml  ci.yml  release.yml  windows-dll.yml
core/: CMakeLists.txt
core/include/: edge_veda.h
core/src/: engine.cpp  memory_guard.cpp  vision_engine.cpp  whisper_engine.cpp  win_compat.h
core/tests/: CMakeLists.txt  test_api_guards.cpp
flutter/: CHANGELOG.md  README.md  pubspec.yaml
flutter/android/: build.gradle
flutter/android/src/main/: AndroidManifest.xml
flutter/android/src/main/kotlin/com/edgeveda/edge_veda/: EdgeVedaPlugin.kt  InferenceForegroundService.kt
flutter/example/android/app/src/main/: AndroidManifest.xml
flutter/ios/: edge_veda.podspec
flutter/ios/Classes/: EdgeVedaKeepAlive.m  EdgeVedaPlugin.m
flutter/ios/Frameworks/EdgeVedaCore.xcframework/: Info.plist
flutter/ios/Frameworks/EdgeVedaCore.xcframework/ios-arm64-simulator/EdgeVedaCore.framework/: Info.plist
flutter/ios/Frameworks/EdgeVedaCore.xcframework/ios-arm64/EdgeVedaCore.framework/: Info.plist
flutter/lib/src/: chat_session.dart  chat_template.dart  edge_veda_impl.dart  inference_config.dart  model_advisor.dart  model_manager.dart  runtime_policy.dart  telemetry_service.dart  thread_advisor.dart  types.dart
flutter/lib/src/ffi/: bindings.dart
flutter/lib/src/isolate/: worker_isolate.dart  worker_messages.dart
flutter/macos/: edge_veda.podspec
flutter/macos/Classes/: EdgeVedaPlugin.swift
flutter/macos/Frameworks/EdgeVedaCore.xcframework/: Info.plist
flutter/macos/Frameworks/EdgeVedaCore.xcframework/macos-arm64_x86_64/Headers/: edge_veda.h
flutter/test/: memory_estimator_test.dart  model_manager_test.dart
flutter/windows/: CMakeLists.txt  edge_veda_plugin.cpp  edge_veda_plugin.h  edge_veda_plugin_c_api.cpp
flutter/windows/include/edge_veda/: edge_veda_plugin_c_api.h
scripts/: build-android.sh  build-ios.sh  build-macos.sh  prepare-release.sh  publish-pod.sh
tools/mcp-server/: package-lock.json
